<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3FA"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/img_back1"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/profile"
            android:textColor="@color/poppins_bold_blue" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/ic_ring_blue"
                    android:gravity="center"
                    android:padding="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_profile_image11"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">

                    </de.hdodenhof.circleimageview.CircleImageView>
                </LinearLayout>

                <TextView
                    android:id="@+id/change_pic_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/user_name_textview"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/change_picture"
                    android:textAlignment="center"
                    android:textColor="@color/poppins_bold_blue" />

                <TextView
                    android:id="@+id/user_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/user_name_editText"
                    android:fontFamily="@font/poppins"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue" />


                <EditText
                    android:id="@+id/user_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/update_profile_btn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit_text_background_png"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="10dp">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:gravity="bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/testImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center">

                </ImageView>

                <Button
                    android:id="@+id/update_profile_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/logout_btn"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_red_border_background"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/update_profile"
                    android:textColor="@color/red">

                </Button>

                <Button
                    android:id="@+id/logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/bottom_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_login_btn_vector"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/logout"
                    android:textColor="@color/white">

                </Button>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/progress_bar_include"
        layout="@layout/progressbar_layout"></include>
</LinearLayout>